--- a/package.json
+++ b/package.json
@@ -16,13 +16,30 @@
     "passport-jwt": "^1.2.1"
   },
   "devDependencies": {
+    "del": "^1.2.0",
     "gulp": "^3.5.6",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-bower": "0.0.13",
+    "gulp-clean": "^0.3.1",
+    "gulp-flatten": "^0.1.1",
+    "gulp-if": "^1.2.5",
+    "gulp-json-editor": "^2.2.1",
     "gulp-minify-css": "^1.2.0",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-ng-constant": "^0.3.0",
+    "gulp-preprocess": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.2.0",
+    "gulp-util": "^2.2.14",
+    "jshint": "^2.8.0",
+    "minimist": "^1.1.2",
+    "mv": "^2.1.1",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
     "shelljs": "^0.3.0"
   }
 }
