--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobp",
-  "main": "server.js",
+  "main": "",
   "cordovaPlugins": [
     "com.ionic.keyboard",
     "cordova-plugin-extension",
@@ -12,7 +12,6 @@
     "cordova-plugin-splashscreen"
   ],
   "cordovaPlatforms": [
-    "ios",
     "android"
   ]
 }
